--- a/Projeto3.ipynb
+++ b/Projeto3.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "########IMPORTANTE########\n",
@@ -13,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -25,235 +27,166 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
-    "from numpy import zeros_like\n"
+    "from numpy import zeros_like\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import confusion_matrix,auc,roc_auc_score\n",
+    "from sklearn.metrics import recall_score, precision_score, accuracy_score, f1_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('creditcard.csv',sep=\",\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "284807"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tamanho da base treinamento:  199364\n",
+      "Fraudes na base treinamento:  344\n",
+      "Tamanho da base teste:  85443\n",
+      "Fraudes na base teste:  148\n"
+     ]
+    }
+   ],
+   "source": [
+    "# separando dataset em base de treinamento e em base de teste\n",
+    "\n",
+    "\n",
+    "clas = df['Class'].values #fraude ou não\n",
+    "feat = df.drop(['Class'],axis=1).values #features\n",
+    "feat_train, feat_test, clas_train, clas_test = train_test_split(feat, clas, test_size=0.3, stratify=clas)\n",
+    "\n",
+    "print(\"Tamanho da base treinamento: \", len(clas_train))\n",
+    "print(\"Fraudes na base treinamento: \", sum(clas_train))\n",
+    "print(\"Tamanho da base teste: \", len(clas_test))\n",
+    "print(\"Fraudes na base teste: \", sum(clas_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "dados = pd.read_csv('creditcard.csv',sep=\",\")\n"
+    "# classificando base teste\n",
+    "clf = GaussianNB()\n",
+    "clf.fit(feat_train,clas_train)\n",
+    "\n",
+    "prob_fraude = clf.predict_proba(feat_test)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tomada de decisão\n",
+    "\n",
+    "classificador1 = pd.DataFrame(clas_test)\n",
+    "\n",
+    "\n",
+    "for index, row in classificador1.iterrows():\n",
+    "    i = classificador1.index.get_loc(index)\n",
+    "    if prob_fraude[i][0]>prob_fraude[0][1]:\n",
+    "        classificador1.loc[index, 'Classificação'] = '0'\n",
+    "\n",
+    "\n",
+    "    if prob_fraude[i][0]<prob_fraude[0][1]:\n",
+    "        classificador1.loc[index, 'Classificação'] = '1'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
+       "      <th>Classificação</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
        "      <th></th>\n",
-       "      <th>Time</th>\n",
-       "      <th>V1</th>\n",
-       "      <th>V2</th>\n",
-       "      <th>V3</th>\n",
-       "      <th>V4</th>\n",
-       "      <th>V5</th>\n",
-       "      <th>V6</th>\n",
-       "      <th>V7</th>\n",
-       "      <th>V8</th>\n",
-       "      <th>V9</th>\n",
-       "      <th>...</th>\n",
-       "      <th>V21</th>\n",
-       "      <th>V22</th>\n",
-       "      <th>V23</th>\n",
-       "      <th>V24</th>\n",
-       "      <th>V25</th>\n",
-       "      <th>V26</th>\n",
-       "      <th>V27</th>\n",
-       "      <th>V28</th>\n",
-       "      <th>Amount</th>\n",
-       "      <th>Class</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>-1.359807</td>\n",
-       "      <td>-0.072781</td>\n",
-       "      <td>2.536347</td>\n",
-       "      <td>1.378155</td>\n",
-       "      <td>-0.338321</td>\n",
-       "      <td>0.462388</td>\n",
-       "      <td>0.239599</td>\n",
-       "      <td>0.098698</td>\n",
-       "      <td>0.363787</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.018307</td>\n",
-       "      <td>0.277838</td>\n",
-       "      <td>-0.110474</td>\n",
-       "      <td>0.066928</td>\n",
-       "      <td>0.128539</td>\n",
-       "      <td>-0.189115</td>\n",
-       "      <td>0.133558</td>\n",
-       "      <td>-0.021053</td>\n",
-       "      <td>149.62</td>\n",
-       "      <td>0</td>\n",
+       "      <td>85105</td>\n",
+       "      <td>190</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.191857</td>\n",
-       "      <td>0.266151</td>\n",
-       "      <td>0.166480</td>\n",
-       "      <td>0.448154</td>\n",
-       "      <td>0.060018</td>\n",
-       "      <td>-0.082361</td>\n",
-       "      <td>-0.078803</td>\n",
-       "      <td>0.085102</td>\n",
-       "      <td>-0.255425</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.225775</td>\n",
-       "      <td>-0.638672</td>\n",
-       "      <td>0.101288</td>\n",
-       "      <td>-0.339846</td>\n",
-       "      <td>0.167170</td>\n",
-       "      <td>0.125895</td>\n",
-       "      <td>-0.008983</td>\n",
-       "      <td>0.014724</td>\n",
-       "      <td>2.69</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-1.358354</td>\n",
-       "      <td>-1.340163</td>\n",
-       "      <td>1.773209</td>\n",
-       "      <td>0.379780</td>\n",
-       "      <td>-0.503198</td>\n",
-       "      <td>1.800499</td>\n",
-       "      <td>0.791461</td>\n",
-       "      <td>0.247676</td>\n",
-       "      <td>-1.514654</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.247998</td>\n",
-       "      <td>0.771679</td>\n",
-       "      <td>0.909412</td>\n",
-       "      <td>-0.689281</td>\n",
-       "      <td>-0.327642</td>\n",
-       "      <td>-0.139097</td>\n",
-       "      <td>-0.055353</td>\n",
-       "      <td>-0.059752</td>\n",
-       "      <td>378.66</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>-0.966272</td>\n",
-       "      <td>-0.185226</td>\n",
-       "      <td>1.792993</td>\n",
-       "      <td>-0.863291</td>\n",
-       "      <td>-0.010309</td>\n",
-       "      <td>1.247203</td>\n",
-       "      <td>0.237609</td>\n",
-       "      <td>0.377436</td>\n",
-       "      <td>-1.387024</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.108300</td>\n",
-       "      <td>0.005274</td>\n",
-       "      <td>-0.190321</td>\n",
-       "      <td>-1.175575</td>\n",
-       "      <td>0.647376</td>\n",
-       "      <td>-0.221929</td>\n",
-       "      <td>0.062723</td>\n",
-       "      <td>0.061458</td>\n",
-       "      <td>123.50</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>-1.158233</td>\n",
-       "      <td>0.877737</td>\n",
-       "      <td>1.548718</td>\n",
-       "      <td>0.403034</td>\n",
-       "      <td>-0.407193</td>\n",
-       "      <td>0.095921</td>\n",
-       "      <td>0.592941</td>\n",
-       "      <td>-0.270533</td>\n",
-       "      <td>0.817739</td>\n",
-       "      <td>...</td>\n",
-       "      <td>-0.009431</td>\n",
-       "      <td>0.798278</td>\n",
-       "      <td>-0.137458</td>\n",
-       "      <td>0.141267</td>\n",
-       "      <td>-0.206010</td>\n",
-       "      <td>0.502292</td>\n",
-       "      <td>0.219422</td>\n",
-       "      <td>0.215153</td>\n",
-       "      <td>69.99</td>\n",
-       "      <td>0</td>\n",
+       "      <td>84</td>\n",
+       "      <td>64</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Time        V1        V2        V3        V4        V5        V6        V7  \\\n",
-       "0   0.0 -1.359807 -0.072781  2.536347  1.378155 -0.338321  0.462388  0.239599   \n",
-       "1   0.0  1.191857  0.266151  0.166480  0.448154  0.060018 -0.082361 -0.078803   \n",
-       "2   1.0 -1.358354 -1.340163  1.773209  0.379780 -0.503198  1.800499  0.791461   \n",
-       "3   1.0 -0.966272 -0.185226  1.792993 -0.863291 -0.010309  1.247203  0.237609   \n",
-       "4   2.0 -1.158233  0.877737  1.548718  0.403034 -0.407193  0.095921  0.592941   \n",
-       "\n",
-       "         V8        V9  ...         V21       V22       V23       V24  \\\n",
-       "0  0.098698  0.363787  ...   -0.018307  0.277838 -0.110474  0.066928   \n",
-       "1  0.085102 -0.255425  ...   -0.225775 -0.638672  0.101288 -0.339846   \n",
-       "2  0.247676 -1.514654  ...    0.247998  0.771679  0.909412 -0.689281   \n",
-       "3  0.377436 -1.387024  ...   -0.108300  0.005274 -0.190321 -1.175575   \n",
-       "4 -0.270533  0.817739  ...   -0.009431  0.798278 -0.137458  0.141267   \n",
-       "\n",
-       "        V25       V26       V27       V28  Amount  Class  \n",
-       "0  0.128539 -0.189115  0.133558 -0.021053  149.62      0  \n",
-       "1  0.167170  0.125895 -0.008983  0.014724    2.69      0  \n",
-       "2 -0.327642 -0.139097 -0.055353 -0.059752  378.66      0  \n",
-       "3  0.647376 -0.221929  0.062723  0.061458  123.50      0  \n",
-       "4 -0.206010  0.502292  0.219422  0.215153   69.99      0  \n",
-       "\n",
-       "[5 rows x 31 columns]"
+       "Classificação      0    1\n",
+       "0                        \n",
+       "0              85105  190\n",
+       "1                 84   64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dados.head()"
+    "Comparativo = pd.crosstab(classificador1[0],classificador1['Classificação'])\n",
+    "Comparativo"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -272,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
