primeiro classificação atualizada

--- a/Projeto3.ipynb
+++ b/Projeto3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -37,8 +37,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -48,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +58,7 @@
        "284807"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -100,8 +101,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# classificando base teste\n",
@@ -113,28 +116,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tomada de decisão\n",
+    "# tomada de decisão pronta\n",
     "\n",
-    "classificador1 = pd.DataFrame(clas_test)\n",
+    "pred = clf.predict(feat_test)\n",
+    "classificador_teste = pd.DataFrame(clas_test)\n",
     "\n",
-    "\n",
-    "for index, row in classificador1.iterrows():\n",
-    "    i = classificador1.index.get_loc(index)\n",
-    "    if prob_fraude[i][0]>prob_fraude[0][1]:\n",
-    "        classificador1.loc[index, 'Classificação'] = '0'\n",
-    "\n",
-    "\n",
-    "    if prob_fraude[i][0]<prob_fraude[0][1]:\n",
-    "        classificador1.loc[index, 'Classificação'] = '1'"
+    "for index, row in classificador_teste.iterrows():\n",
+    "    i = classificador_teste.index.get_loc(index)\n",
+    "    if pred[i]==0:\n",
+    "        classificador_teste.loc[index, 'Classificação'] = '0'\n",
+    "    if pred[i]==1:\n",
+    "        classificador_teste.loc[index, 'Classificação'] = '1'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -159,13 +160,13 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>85105</td>\n",
-       "      <td>190</td>\n",
+       "      <td>84734</td>\n",
+       "      <td>561</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>84</td>\n",
-       "      <td>64</td>\n",
+       "      <td>49</td>\n",
+       "      <td>99</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -174,19 +175,28 @@
       "text/plain": [
        "Classificação      0    1\n",
        "0                        \n",
-       "0              85105  190\n",
-       "1                 84   64"
+       "0              84734  561\n",
+       "1                 49   99"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Comparativo = pd.crosstab(classificador1[0],classificador1['Classificação'])\n",
-    "Comparativo"
+    "Comparativo_teste = pd.crosstab(classificador_teste[0],classificador_teste['Classificação'])\n",
+    "Comparativo_teste"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
